--- a/6_pde_assimilation_pinn.ipynb
+++ b/6_pde_assimilation_pinn.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "615bb923",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
     "\n",
     "PDE_OK = True\n",
     "try:\n",
-    "    candidates = [\"tumor_diffusion_pde_analysis_annotated.py\", \"tumor_diffusion_pde_analysis.py\"]\n",
+    "    candidates = [\"2_tumor_diffusion_pde_analysis.py\"]\n",
     "    pdemod = None\n",
     "    for cand in candidates:\n",
     "        if Path(cand).exists():\n",
