--- a/7_supernet_supermodel.ipynb
+++ b/7_supernet_supermodel.ipynb
@@ -1178,8 +1178,7 @@
     "    \"\"\"\n",
     "    supernet = supernet.to(device)\n",
     "    optimizer = optim.Adam(supernet.parameters(), lr=lr)\n",
-    "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5,\n",
-    "                                                     patience=300, verbose=False)\n",
+    "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5, patience=300)\n",
     "\n",
     "    # Dane treningowe\n",
     "    coll_pts = training_data[\"collocation\"]\n",
