--- a/7_supernet_supermodel.ipynb
+++ b/7_supernet_supermodel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8682565a",
+   "id": "3d69dd28",
    "metadata": {},
    "source": [
     "# Zadanie 7 — SuperNet i Supermodel\n",
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cb33930",
+   "id": "6df4da06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd5b9fa1",
+   "id": "7652cc80",
    "metadata": {},
    "source": [
     "## 1. Importy modułów PDE i ODE\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b926e92",
+   "id": "61c0ae89",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39b2b21f",
+   "id": "14461663",
    "metadata": {},
    "source": [
     "## 2. Definicja parametrów ODE\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f75b135d",
+   "id": "1fbc833d",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1737431c",
+   "id": "a8fab0a3",
    "metadata": {},
    "source": [
     "## 3. Generowanie/wczytanie danych referencyjnych PDE\n",
@@ -292,19 +292,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd3bbf6",
+   "id": "62aec25c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_or_generate_pde_reference(T=6.0, N=64, solver=\"semi_implicit\"):\n",
+    "def load_or_generate_pde_reference(T=6.0, N=64, solver=\"semi_implicit\", high_resolution=True):\n",
     "    \"\"\"\n",
     "    Wczytuje lub generuje trajektorię TB(t) z PDE.\n",
     "\n",
-    "    TODO: Jeśli masz zapisane dane z wcześniejszych zadań (np. po asymilacji),\n",
-    "    wczytaj je tutaj. W przeciwnym razie uruchom symulację PDE.\n",
-    "\n",
     "    Zwraca: dict {\"t\": array, \"TB\": array, \"S_final\": array, \"R_final\": array, ...}\n",
     "    \"\"\"\n",
+    "    # Próba wczytania z istniejącego pliku o wysokiej rozdzielczości\n",
+    "    if high_resolution:\n",
+    "        high_res_file = \"out/supermodel_pde_reference_highres.csv\"\n",
+    "        if Path(high_res_file).exists():\n",
+    "            df = pd.read_csv(high_res_file)\n",
+    "            if \"t\" in df.columns and \"tumor_burden\" in df.columns:\n",
+    "                print(f\"[OK] Wczytano wysokorozdzielcze dane PDE z: {high_res_file}\")\n",
+    "                return {\"t\": df[\"t\"].values, \"TB\": df[\"tumor_burden\"].values}\n",
+    "\n",
     "    # Próba wczytania z istniejącego pliku\n",
     "    possible_files = [\n",
     "        \"out/pinn_reference_pde.csv\",\n",
@@ -323,24 +329,30 @@
     "                print(f\"[OK] Wczytano PDE z: {fname}\")\n",
     "                return {\"t\": df[\"t\"].values, \"TB\": df[\"TB_explicit\"].values}\n",
     "\n",
-    "    # Jeśli nie znaleziono, wygeneruj nową symulację\n",
+    "    # Jeśli nie znaleziono, wygeneruj nową symulację o wysokiej rozdzielczości\n",
     "    if PDE_OK:\n",
-    "        print(\"[INFO] Generuję nową symulację PDE...\")\n",
+    "        print(\"[INFO] Generuję nową symulację PDE o wysokiej rozdzielczości...\")\n",
     "        grid = Grid(Nx=N, Ny=N)\n",
     "        p = copy.deepcopy(p_pde_base)\n",
     "        p.dose_type = \"infusion_const\"\n",
     "        p.infusion_rate = 0.15\n",
     "\n",
     "        dt = 0.01\n",
+    "        save_interval = 10 if high_resolution else 50\n",
     "\n",
-    "        (S_final, R_final, I_final, C_final), traj, info = run_simulation(solver, grid, p, T=T, dt=dt, save_every=50)\n",
+    "        (S_final, R_final, I_final, C_final), traj, info = run_simulation(\n",
+    "            solver, grid, p, T=T, dt=dt, save_every=save_interval\n",
+    "        )\n",
     "\n",
     "        t_arr = np.array([rec[\"t\"] for rec in traj])\n",
     "        TB_arr = np.array([rec[\"tumor_burden\"] for rec in traj])\n",
     "\n",
+    "        print(f\"[INFO] Wygenerowano {len(t_arr)} punktów czasowych (T={T}, dt={dt}, save_every={save_interval})\")\n",
+    "\n",
     "        # Zapisz do pliku\n",
+    "        fname = \"supermodel_pde_reference_highres.csv\" if high_resolution else \"supermodel_pde_reference.csv\"\n",
     "        df_ref = pd.DataFrame({\"t\": t_arr, \"tumor_burden\": TB_arr})\n",
-    "        save_csv(df_ref, \"supermodel_pde_reference.csv\")\n",
+    "        save_csv(df_ref, fname)\n",
     "\n",
     "        return {\n",
     "            \"t\": t_arr,\n",
@@ -362,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40b06be7",
+   "id": "4fcc6da9",
    "metadata": {},
    "source": [
     "## 4. Symulacja ODE z kalibrowanymi parametrami\n",
@@ -373,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c6e098c",
+   "id": "ad388535",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -393,8 +405,27 @@
     "    p_ode = ODEParams()\n",
     "    print(\"[INFO] Używam domyślnych parametrów ODE\")\n",
     "\n",
-    "# Warunki początkowe ODE\n",
-    "y0_ode = np.array([0.8, 0.2, 0.0, 0.0])  # [S, R, I, C]\n",
+    "# Warunki początkowe ODE - dopasowane do PDE!\n",
+    "# POPRAWKA: użyj średniej przestrzennej z PDE zamiast arbitralnych wartości\n",
+    "if PDE_OK:\n",
+    "    # Generuj te same warunki początkowe co PDE\n",
+    "    grid_ic = Grid(Nx=64, Ny=64)\n",
+    "    S0_pde, R0_pde, I0_pde, C0_pde = init_fields(grid_ic)\n",
+    "\n",
+    "    # ODE powinno reprezentować średnią przestrzenną (spatially-averaged model)\n",
+    "    y0_ode = np.array([\n",
+    "        np.mean(S0_pde),\n",
+    "        np.mean(R0_pde),\n",
+    "        np.mean(I0_pde),\n",
+    "        np.mean(C0_pde)\n",
+    "    ])\n",
+    "    print(f\"[INFO] Dopasowano IC ODE do PDE: S0={y0_ode[0]:.4f}, R0={y0_ode[1]:.4f}, \"\n",
+    "          f\"I0={y0_ode[2]:.4f}, C0={y0_ode[3]:.4f}\")\n",
+    "    print(f\"       TB_ODE(0) = {y0_ode[0] + y0_ode[1]:.4f} vs TB_PDE(0) = {TB_pde[0]:.4f}\")\n",
+    "else:\n",
+    "    # Fallback jeśli PDE niedostępny\n",
+    "    y0_ode = np.array([0.8, 0.2, 0.0, 0.0])\n",
+    "    print(\"[WARNING] Brak modułu PDE - używam arbitralnych IC dla ODE\")\n",
     "\n",
     "# Symulacja ODE\n",
     "ode_traj = simulate_ode(p_ode, y0_ode, t_pde)\n",
@@ -402,12 +433,57 @@
     "\n",
     "print(f\"[OK] Symulacja ODE zakończona\")\n",
     "print(f\"     RMSE(ODE vs PDE): {rmse(TB_ode, TB_pde):.6f}\")\n",
-    "print(f\"     MAE(ODE vs PDE):  {mae(TB_ode, TB_pde):.6f}\")"
+    "print(f\"     MAE(ODE vs PDE):  {mae(TB_ode, TB_pde):.6f}\")\n",
+    "\n",
+    "if SCIPY_AVAILABLE and rmse(TB_ode, TB_pde) > 0.1:\n",
+    "    print(\"\\n[INFO] RMSE > 0.1 - uruchamiam automatyczną kalibrację parametrów ODE...\")\n",
+    "\n",
+    "    from scipy.optimize import minimize\n",
+    "\n",
+    "    # Parametry do optymalizacji (najważniejsze dla dynamiki TB)\n",
+    "    param_names = [\"alpha_S\", \"lam\", \"mu_max\"]\n",
+    "    p0 = [p_ode.alpha_S, p_ode.lam, p_ode.mu_max]\n",
+    "    bounds = [(0.3, 1.5), (0.05, 0.5), (0.0, 0.15)]  # sensowne zakresy\n",
+    "\n",
+    "    def objective(params):\n",
+    "        p_test = copy.deepcopy(p_ode)\n",
+    "        p_test.alpha_S = params[0]\n",
+    "        p_test.lam = params[1]\n",
+    "        p_test.mu_max = params[2]\n",
+    "        try:\n",
+    "            traj_test = simulate_ode(p_test, y0_ode, t_pde)\n",
+    "            return rmse(traj_test[\"TB\"], TB_pde)\n",
+    "        except:\n",
+    "            return 1e6\n",
+    "\n",
+    "    print(f\"  Optymalizacja: {param_names}\")\n",
+    "    print(f\"  Początkowe: alpha_S={p0[0]:.3f}, lam={p0[1]:.3f}, mu_max={p0[2]:.3f}\")\n",
+    "\n",
+    "    result = minimize(objective, p0, bounds=bounds, method='L-BFGS-B',\n",
+    "                     options={'maxiter': 50, 'ftol': 1e-6})\n",
+    "\n",
+    "    if result.success:\n",
+    "        p_ode.alpha_S = result.x[0]\n",
+    "        p_ode.lam = result.x[1]\n",
+    "        p_ode.mu_max = result.x[2]\n",
+    "\n",
+    "        print(f\"  Skalibrowane: alpha_S={result.x[0]:.3f}, lam={result.x[1]:.3f}, mu_max={result.x[2]:.3f}\")\n",
+    "        print(f\"  RMSE: {result.fun:.6f} (poprzednio: {rmse(TB_ode, TB_pde):.6f})\")\n",
+    "\n",
+    "        # Przeliczy trajektorię ze skalibrowanymi parametrami\n",
+    "        ode_traj = simulate_ode(p_ode, y0_ode, t_pde)\n",
+    "        TB_ode = ode_traj[\"TB\"]\n",
+    "\n",
+    "        print(f\"[OK] Kalibracja ODE zakończona sukcesem!\")\n",
+    "    else:\n",
+    "        print(f\"[WARNING] Kalibracja nie powiodła się: {result.message}\")\n",
+    "else:\n",
+    "    print(\"[INFO] ODE baseline wystarczająco dobry - pomijam kalibrację\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e2387937",
+   "id": "a540b024",
    "metadata": {},
    "source": [
     "## 5. SUPERMODEL — Definicja\n",
@@ -420,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c5748b",
+   "id": "a1d22d83",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -470,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ac96c5",
+   "id": "0a602141",
    "metadata": {},
    "source": [
     "## 6. SUPERMODEL — Integrator ODE w PyTorch"
@@ -479,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9afcbcd",
+   "id": "252e00e1",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -594,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2b804e",
+   "id": "40845541",
    "metadata": {},
    "source": [
     "## 7. SUPERMODEL — Trenowanie"
@@ -603,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "246a8184",
+   "id": "8e7aeeac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5d47aa2",
+   "id": "93ff3de5",
    "metadata": {},
    "source": [
     "## 8. SUPERMODEL — Ewaluacja"
@@ -724,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3ebe34b",
+   "id": "540d645a",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -782,7 +858,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ecb6d4",
+   "id": "4d1aecf6",
    "metadata": {},
    "source": [
     "## 9. SUPERNET — Definicja\n",
@@ -795,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ea3f9c4",
+   "id": "5206cd2a",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -863,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edd0b849",
+   "id": "4bac3494",
    "metadata": {},
    "source": [
     "## 10. SUPERNET — Generowanie danych treningowych\n",
@@ -875,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "441a2ce7",
+   "id": "04563c6c",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -943,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99ecffb",
+   "id": "cc4ac230",
    "metadata": {},
    "source": [
     "## 11. SUPERNET — Przygotowanie danych treningowych"
@@ -952,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66a6000e",
+   "id": "e44fb402",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1038,7 +1114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "563114f6",
+   "id": "623a6388",
    "metadata": {},
    "source": [
     "## 12. SUPERNET — Funkcje straty (PDE residuals)"
@@ -1047,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd8d8c4",
+   "id": "3c81e269",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1146,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "303ee6fe",
+   "id": "2ea2c995",
    "metadata": {},
    "source": [
     "## 13. SUPERNET — Trenowanie"
@@ -1155,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17fa516d",
+   "id": "7a301034",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1270,10 +1346,12 @@
     "        loss_tb = torch.mean((TB_pred_tensor - TB_true_tensor)**2)\n",
     "\n",
     "        # === Łączna strata ===\n",
-    "        # Wagi dla różnych komponentów (do dostrojenia)\n",
-    "        w_pde = 1.0\n",
-    "        w_ic = 10.0\n",
-    "        w_tb = 100.0\n",
+    "        # TB trajectory jest najważniejszy (to chcemy dopasować)\n",
+    "        # IC musi być silnie wymuszony (poprawny start)\n",
+    "        # PDE residuals dla regularyzacji fizycznej\n",
+    "        w_pde = 0.1      # Zmniejszony - fizyka jako regularyzacja, nie główny cel\n",
+    "        w_ic = 50.0      # Zwiększony z 10.0 - krytyczne dla poprawnego startu\n",
+    "        w_tb = 500.0     # Zwiększony z 100.0 - główny cel: dopasowanie TB(t)\n",
     "\n",
     "        loss = w_pde * loss_pde + w_ic * loss_ic + w_tb * loss_tb\n",
     "\n",
@@ -1311,23 +1389,29 @@
     "print(f\"\\n[SuperNet] Parametry sieci: {sum(p.numel() for p in supernet.parameters())/1e6:.2f}M\")\n",
     "\n",
     "# Trenowanie (uwaga: może być czasochłonne)\n",
-    "# W produkcji użyj większej liczby epok\n",
     "if PDE_OK:\n",
     "    supernet, supernet_losses = train_supernet(\n",
     "        supernet, training_data, p_pde_base,\n",
-    "        epochs=2000, lr=1e-3, batch_size=512, device=device\n",
+    "        epochs=5000,      # Zwiększone z 2000 - więcej czasu na naukę\n",
+    "        lr=5e-4,          # Zmniejszone z 1e-3 - bardziej stabilne dla dłuższego treningu\n",
+    "        batch_size=512,\n",
+    "        device=device\n",
     "    )\n",
     "\n",
-    "    # Zapisz model\n",
+    "    # Zapisz model i historię treningu\n",
     "    torch.save(supernet.state_dict(), \"out/supernet_model.pt\")\n",
     "    print(\"[OK] Model SuperNet zapisany do out/supernet_model.pt\")\n",
+    "\n",
+    "    # Zapisz historię strat\n",
+    "    loss_df = pd.DataFrame({\"epoch\": range(len(supernet_losses)), \"loss\": supernet_losses})\n",
+    "    save_csv(loss_df, \"supernet_training_history.csv\")\n",
     "else:\n",
     "    print(\"[UWAGA] SuperNet nie został wytrenowany - brak modułu PDE\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2c1282e0",
+   "id": "7c4aac2c",
    "metadata": {},
    "source": [
     "## 14. SUPERNET — Ewaluacja i porównanie"
@@ -1336,7 +1420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30953175",
+   "id": "965cf490",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1509,7 @@
     "        plt.legend(fontsize=10)\n",
     "        plt.grid(alpha=0.3)\n",
     "\n",
-    "        fname = f\"out/supermodel_supernet_tb_dose{str(p_dose).replace('.', '')}.png\"\n",
+    "        fname = f\"figs/supermodel_supernet_tb_dose{str(p_dose).replace('.', '')}.png\"\n",
     "        savefig_root(fname)\n",
     "        plt.show()\n",
     "\n",
@@ -1443,7 +1527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbc48dfc",
+   "id": "57a7bf2b",
    "metadata": {},
    "source": [
     "## 15. Podsumowanie końcowe"
@@ -1452,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb236af",
+   "id": "2a3ad855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,6 +1571,48 @@
     "if PDE_OK and \"dose_1.0\" in supernet_metrics:\n",
     "    print(f\"  SuperNet vs PDE:   RMSE={supernet_metrics['dose_1.0']['SuperNet_vs_PDE']['RMSE']:.6f}\")\n",
     "\n",
+    "if PDE_OK:\n",
+    "    print(\"\\n[INFO] Generuję panel porównawczy wszystkich modeli...\")\n",
+    "\n",
+    "    fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
+    "\n",
+    "    for idx, p_dose in enumerate(dose_scenarios):\n",
+    "        ax = axes[idx]\n",
+    "\n",
+    "        t_ref = pde_data_scenarios[p_dose][\"t\"]\n",
+    "        TB_pde_ref = pde_data_scenarios[p_dose][\"TB\"]\n",
+    "\n",
+    "        # Odtwórz wszystkie trajektorie\n",
+    "        p_ode_scaled = copy.deepcopy(p_ode)\n",
+    "        p_ode_scaled.infusion_rate = 0.15 * p_dose\n",
+    "        ode_traj_scaled = simulate_ode(p_ode_scaled, y0_ode, t_ref)\n",
+    "        TB_ode_scaled = ode_traj_scaled[\"TB\"]\n",
+    "\n",
+    "        integrator_scaled = SupermodelIntegrator(p_ode_scaled, correction_net, device=device, method=\"rk4\")\n",
+    "        traj_sm_scaled = integrator_scaled.integrate(y0_ode, t_ref)\n",
+    "        TB_supermodel_scaled = traj_sm_scaled[:, 0] + traj_sm_scaled[:, 1]\n",
+    "\n",
+    "        TB_supernet = evaluate_supernet_scenario(supernet, grid_eval, t_ref, p_dose, device)\n",
+    "\n",
+    "        # Plot\n",
+    "        ax.plot(t_ref, TB_pde_ref, 'k-', lw=2.5, label=\"PDE (reference)\", alpha=0.9)\n",
+    "        ax.plot(t_ref, TB_ode_scaled, 'b--', lw=2, label=f\"ODE (RMSE={rmse(TB_ode_scaled, TB_pde_ref):.3f})\")\n",
+    "        ax.plot(t_ref, TB_supermodel_scaled, 'g:', lw=2.5, label=f\"Supermodel (RMSE={rmse(TB_supermodel_scaled, TB_pde_ref):.3f})\")\n",
+    "        ax.plot(t_ref, TB_supernet, 'r-.', lw=2, label=f\"SuperNet (RMSE={rmse(TB_supernet, TB_pde_ref):.3f})\")\n",
+    "\n",
+    "        ax.set_xlabel(\"Czas t\", fontsize=11)\n",
+    "        ax.set_ylabel(\"Tumor Burden TB(t)\", fontsize=11)\n",
+    "        ax.set_title(f\"Dawka p = {p_dose}\", fontsize=12, fontweight='bold')\n",
+    "        ax.legend(fontsize=9)\n",
+    "        ax.grid(alpha=0.3)\n",
+    "\n",
+    "    plt.suptitle(\"Porównanie wszystkich modeli dla różnych scenariuszy dawkowania\", fontsize=14, fontweight='bold')\n",
+    "    plt.tight_layout()\n",
+    "    savefig_fig(\"supermodel_tb_compare.png\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    print(\"[OK] Panel porównawczy zapisany do figs/supermodel_tb_compare.png\")\n",
+    "\n",
     "print(\"\\n\" + \"=\"*70)\n",
     "print(\"Zadanie 7 zakończone!\")\n",
     "print(\"=\"*70)"
@@ -1495,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5141a0",
+   "id": "12418313",
    "metadata": {},
    "outputs": [],
    "source": []
