update python file for the GPU execution

--- a/node/neural_ode_learning.ipynb
+++ b/node/neural_ode_learning.ipynb
@@ -1413,9 +1413,19 @@
     "### Example 4: Evaluate Model\n",
     "```python\n",
     "# Uncomment to run:\n",
-    "# main(mode='evaluate', model='small_mlp')\n",
-    "# main(mode='evaluate', model='large_mlp')\n",
+    "# run_node(mode='evaluate', model='small_mlp')\n",
+    "# run_node(mode='evaluate', model='large_mlp')\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf569711",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_node(mode='evaluate', model='small_mlp')"
    ]
   },
   {
@@ -1426,8 +1436,18 @@
     "### Example 5: Generate Visualizations\n",
     "```python\n",
     "# Uncomment to run:\n",
-    "# main(mode='visualize')\n",
+    "# run_node(mode='visualize')\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d0d033f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_node(mode='visualize')"
    ]
   },
   {
@@ -1442,9 +1462,9 @@
     "# For quick testing, you can modify the generate_neural_ode_dataset function\n",
     "# to use fewer trajectories, e.g., n_trajectories=10\n",
     "# Then train with fewer epochs:\n",
-    "# main(mode='generate_data')  # Modify n_trajectories in code first\n",
-    "# main(mode='train', model='small_mlp', epochs=50, batch_size=4)\n",
-    "# main(mode='evaluate', model='small_mlp')\n",
+    "# run_node(mode='generate_data')  # Modify n_trajectories in code first\n",
+    "# run_node(mode='train', model='small_mlp', epochs=50, batch_size=4)\n",
+    "# run_node(mode='evaluate', model='small_mlp')\n",
     "```"
    ]
   }
