--- a/node/neural_ode_learning.ipynb
+++ b/node/neural_ode_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e68eb9b",
+   "id": "c39de3e1",
    "metadata": {},
    "source": [
     "# Neural ODE Learning for Cytotoxic Drug R&D Model\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c3499f7",
+   "id": "6aa02c41",
    "metadata": {},
    "source": [
     "## Section 1: Imports and Setup"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83d25cca",
+   "id": "5ac27404",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -114,11 +114,22 @@
     "Params = pde_module.Params\n",
     "init_fields = pde_module.init_fields\n",
     "\n",
-    "# Setup directories\n",
-    "Path(\"out/neural_ode_dataset\").mkdir(parents=True, exist_ok=True)\n",
-    "Path(\"out/neural_ode_models\").mkdir(parents=True, exist_ok=True)\n",
-    "Path(\"out/neural_ode_results\").mkdir(parents=True, exist_ok=True)\n",
-    "Path(\"figs\").mkdir(parents=True, exist_ok=True)\n",
+    "# Setup directories - use node/ prefix when running from root\n",
+    "# Detect if we're in the root directory or node directory\n",
+    "if Path(\"node\").exists() and Path(\"node\").is_dir():\n",
+    "    # Running from root directory\n",
+    "    OUT_BASE = Path(\"node/out\")\n",
+    "    FIG_BASE = Path(\"node/figs\")\n",
+    "else:\n",
+    "    # Running from node directory\n",
+    "    OUT_BASE = Path(\"out\")\n",
+    "    FIG_BASE = Path(\"figs\")\n",
+    "\n",
+    "# Create directories\n",
+    "(OUT_BASE / \"neural_ode_dataset\").mkdir(parents=True, exist_ok=True)\n",
+    "(OUT_BASE / \"neural_ode_models\").mkdir(parents=True, exist_ok=True)\n",
+    "(OUT_BASE / \"neural_ode_results\").mkdir(parents=True, exist_ok=True)\n",
+    "FIG_BASE.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Device setup\n",
     "device = torch.device(\n",
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b091dd42",
+   "id": "52875ec4",
    "metadata": {},
    "source": [
     "## Section 2: Data Generation from PDE"
@@ -171,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f5dfbb",
+   "id": "24c864fc",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -420,9 +431,9 @@
     "    test_data = dataset[n_train+n_val:]\n",
     "\n",
     "    # Save\n",
-    "    np.savez_compressed(\"out/neural_ode_dataset/train_trajectories.npz\", trajectories=train_data)\n",
-    "    np.savez_compressed(\"out/neural_ode_dataset/val_trajectories.npz\", trajectories=val_data)\n",
-    "    np.savez_compressed(\"out/neural_ode_dataset/test_trajectories.npz\", trajectories=test_data)\n",
+    "    np.savez_compressed(OUT_BASE / \"neural_ode_dataset/train_trajectories.npz\", trajectories=train_data)\n",
+    "    np.savez_compressed(OUT_BASE / \"neural_ode_dataset/val_trajectories.npz\", trajectories=val_data)\n",
+    "    np.savez_compressed(OUT_BASE / \"neural_ode_dataset/test_trajectories.npz\", trajectories=test_data)\n",
     "\n",
     "    # Save metadata\n",
     "    metadata = {\n",
@@ -432,7 +443,7 @@
     "        'n_test': n_test,\n",
     "        'split': {'train': train_frac, 'val': val_frac, 'test': 1-train_frac-val_frac}\n",
     "    }\n",
-    "    save_json(metadata, \"out/neural_ode_dataset/metadata.json\")\n",
+    "    save_json(metadata, OUT_BASE / \"neural_ode_dataset/metadata.json\")\n",
     "\n",
     "    print(f\"\\n[Dataset Split]\")\n",
     "    print(f\"  Train: {n_train} trajectories\")\n",
@@ -443,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "397817b7",
+   "id": "1abe3530",
    "metadata": {},
    "source": [
     "## Section 3: Dataset Class and DataLoader"
@@ -452,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bf828d0",
+   "id": "52dcb41f",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -504,9 +515,9 @@
     "    Returns:\n",
     "        train_dataset, val_dataset, test_dataset\n",
     "    \"\"\"\n",
-    "    train_data = np.load(\"out/neural_ode_dataset/train_trajectories.npz\", allow_pickle=True)['trajectories']\n",
-    "    val_data = np.load(\"out/neural_ode_dataset/val_trajectories.npz\", allow_pickle=True)['trajectories']\n",
-    "    test_data = np.load(\"out/neural_ode_dataset/test_trajectories.npz\", allow_pickle=True)['trajectories']\n",
+    "    train_data = np.load(OUT_BASE / \"neural_ode_dataset/train_trajectories.npz\", allow_pickle=True)['trajectories']\n",
+    "    val_data = np.load(OUT_BASE / \"neural_ode_dataset/val_trajectories.npz\", allow_pickle=True)['trajectories']\n",
+    "    test_data = np.load(OUT_BASE / \"neural_ode_dataset/test_trajectories.npz\", allow_pickle=True)['trajectories']\n",
     "\n",
     "    train_dataset = NODEDataset(train_data, noise_level=noise_level)\n",
     "    val_dataset = NODEDataset(val_data, noise_level=0.0)  # No noise for validation\n",
@@ -522,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ccb661e",
+   "id": "cb812d86",
    "metadata": {},
    "source": [
     "## Section 4: Neural ODE Architectures"
@@ -531,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ebd5906",
+   "id": "ba2f5825",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -642,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "745cc722",
+   "id": "a691f960",
    "metadata": {},
    "source": [
     "## Section 5: Training Functions"
@@ -651,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b40002",
+   "id": "11a5d591",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -877,7 +888,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9ac80a",
+   "id": "47518205",
    "metadata": {},
    "source": [
     "## Section 6: Evaluation and Metrics"
@@ -886,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bb41d99",
+   "id": "e175caba",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -954,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cebb5c2",
+   "id": "bd25a5c5",
    "metadata": {},
    "source": [
     "## Section 7: Visualization"
@@ -963,14 +974,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa433985",
+   "id": "ab3f148a",
    "metadata": {
     "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
-    "def plot_data_samples(dataset, n_samples=16, save_path=\"figs/neural_ode_data_samples.png\"):\n",
+    "def plot_data_samples(dataset, n_samples=16, save_path=None):\n",
     "    \"\"\"Plot sample trajectories from dataset\"\"\"\n",
+    "    if save_path is None:\n",
+    "        save_path = FIG_BASE / \"neural_ode_data_samples.png\"\n",
     "    fig, axes = plt.subplots(4, 4, figsize=(16, 14))\n",
     "    axes = axes.flatten()\n",
     "\n",
@@ -1000,8 +1013,10 @@
     "    plt.close()\n",
     "\n",
     "\n",
-    "def plot_training_curves(history_small, history_large, save_path=\"figs/neural_ode_training_curves.png\"):\n",
+    "def plot_training_curves(history_small, history_large, save_path=None):\n",
     "    \"\"\"Plot training and validation loss curves for both models\"\"\"\n",
+    "    if save_path is None:\n",
+    "        save_path = FIG_BASE / \"neural_ode_training_curves.png\"\n",
     "    fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
     "\n",
     "    # Small MLP\n",
@@ -1031,8 +1046,10 @@
     "    plt.close()\n",
     "\n",
     "\n",
-    "def plot_test_predictions(predictions, model_name, save_path=\"figs/neural_ode_test_predictions.png\"):\n",
+    "def plot_test_predictions(predictions, model_name, save_path=None):\n",
     "    \"\"\"Plot predictions vs ground truth for first test trajectory\"\"\"\n",
+    "    if save_path is None:\n",
+    "        save_path = FIG_BASE / \"neural_ode_test_predictions.png\"\n",
     "    pred = predictions[0]\n",
     "    t = pred['t']\n",
     "    x_pred = pred['x_pred']\n",
@@ -1060,8 +1077,10 @@
     "    plt.close()\n",
     "\n",
     "\n",
-    "def plot_architecture_comparison(metrics_small, metrics_large, save_path=\"figs/neural_ode_architecture_comparison.png\"):\n",
+    "def plot_architecture_comparison(metrics_small, metrics_large, save_path=None):\n",
     "    \"\"\"Bar chart comparing model architectures\"\"\"\n",
+    "    if save_path is None:\n",
+    "        save_path = FIG_BASE / \"neural_ode_architecture_comparison.png\"\n",
     "    fig, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
     "\n",
     "    models = ['Small MLP', 'Large MLP']\n",
@@ -1098,8 +1117,10 @@
     "    plt.close()\n",
     "\n",
     "\n",
-    "def plot_extrapolation_test(model, test_dataset, device='cpu', save_path=\"figs/neural_ode_extrapolation.png\"):\n",
+    "def plot_extrapolation_test(model, test_dataset, device='cpu', save_path=None):\n",
     "    \"\"\"Test model extrapolation beyond training window\"\"\"\n",
+    "    if save_path is None:\n",
+    "        save_path = FIG_BASE / \"neural_ode_extrapolation.png\"\n",
     "    model.eval()\n",
     "    model = model.to(device)\n",
     "\n",
@@ -1150,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fd71962",
+   "id": "aa4e5d9f",
    "metadata": {},
    "source": [
     "## Section 8: Main Execution"
@@ -1159,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "558030a2",
+   "id": "0aa66354",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1229,7 +1250,7 @@
     "        print(f\"Parameters: {count_parameters(model):,}\")\n",
     "\n",
     "        # Train\n",
-    "        save_path = f\"out/neural_ode_models/model_{args.model}.pt\"\n",
+    "        save_path = OUT_BASE / f\"neural_ode_models/model_{args.model}.pt\"\n",
     "        model, history = train_neural_ode(\n",
     "            model, train_loader, val_loader,\n",
     "            num_epochs=args.epochs,\n",
@@ -1241,7 +1262,7 @@
     "\n",
     "        # Save training history\n",
     "        history_df = pd.DataFrame(history)\n",
-    "        history_path = f\"out/neural_ode_models/training_history_{args.model}.csv\"\n",
+    "        history_path = OUT_BASE / f\"neural_ode_models/training_history_{args.model}.csv\"\n",
     "        history_df.to_csv(history_path, index=False)\n",
     "        print(f\"[Saved] Training history: {history_path}\")\n",
     "\n",
@@ -1265,7 +1286,7 @@
     "        else:  # large_mlp\n",
     "            model = LargeMLP_NODE(state_dim=4, hidden_dim=128, dosing_period=5.0)\n",
     "\n",
-    "        model_path = f\"out/neural_ode_models/model_{args.model}.pt\"\n",
+    "        model_path = OUT_BASE / f\"neural_ode_models/model_{args.model}.pt\"\n",
     "        model.load_state_dict(torch.load(model_path))\n",
     "        print(f\"[Loaded] Model from {model_path}\")\n",
     "\n",
@@ -1278,11 +1299,11 @@
     "            print(f\"  {key}: {value:.6f}\")\n",
     "\n",
     "        # Save metrics\n",
-    "        metrics_path = f\"out/neural_ode_results/metrics_{args.model}.json\"\n",
+    "        metrics_path = OUT_BASE / f\"neural_ode_results/metrics_{args.model}.json\"\n",
     "        save_json(metrics, metrics_path)\n",
     "\n",
     "        # Plot predictions\n",
-    "        plot_path = f\"figs/neural_ode_test_predictions_{args.model}.png\"\n",
+    "        plot_path = FIG_BASE / f\"neural_ode_test_predictions_{args.model}.png\"\n",
     "        plot_test_predictions(predictions, args.model.upper(), save_path=plot_path)\n",
     "\n",
     "        print(\"\\n[Done] Evaluation complete!\")\n",
@@ -1297,16 +1318,16 @@
     "\n",
     "        # Load training histories\n",
     "        try:\n",
-    "            history_small = pd.read_csv(\"out/neural_ode_models/training_history_small_mlp.csv\").to_dict('list')\n",
-    "            history_large = pd.read_csv(\"out/neural_ode_models/training_history_large_mlp.csv\").to_dict('list')\n",
+    "            history_small = pd.read_csv(OUT_BASE / \"neural_ode_models/training_history_small_mlp.csv\").to_dict('list')\n",
+    "            history_large = pd.read_csv(OUT_BASE / \"neural_ode_models/training_history_large_mlp.csv\").to_dict('list')\n",
     "            plot_training_curves(history_small, history_large)\n",
     "        except FileNotFoundError:\n",
     "            print(\"[Warning] Training histories not found, skipping training curves plot\")\n",
     "\n",
     "        # Load metrics\n",
     "        try:\n",
-    "            metrics_small = load_json(\"out/neural_ode_results/metrics_small_mlp.json\")\n",
-    "            metrics_large = load_json(\"out/neural_ode_results/metrics_large_mlp.json\")\n",
+    "            metrics_small = load_json(OUT_BASE / \"neural_ode_results/metrics_small_mlp.json\")\n",
+    "            metrics_large = load_json(OUT_BASE / \"neural_ode_results/metrics_large_mlp.json\")\n",
     "            plot_architecture_comparison(metrics_small, metrics_large)\n",
     "\n",
     "            # Create summary\n",
@@ -1314,7 +1335,7 @@
     "                'small_mlp': metrics_small,\n",
     "                'large_mlp': metrics_large\n",
     "            }\n",
-    "            save_json(metrics_summary, \"out/neural_ode_results/metrics_summary.json\")\n",
+    "            save_json(metrics_summary, OUT_BASE / \"neural_ode_results/metrics_summary.json\")\n",
     "        except FileNotFoundError:\n",
     "            print(\"[Warning] Metrics not found, skipping comparison plot\")\n",
     "\n",
@@ -1324,7 +1345,7 @@
     "\n",
     "            # Test with large MLP\n",
     "            model_large = LargeMLP_NODE(state_dim=4, hidden_dim=128, dosing_period=5.0)\n",
-    "            model_large.load_state_dict(torch.load(\"out/neural_ode_models/model_large_mlp.pt\"))\n",
+    "            model_large.load_state_dict(torch.load(OUT_BASE / \"neural_ode_models/model_large_mlp.pt\"))\n",
     "            plot_extrapolation_test(model_large, test_dataset, device=device)\n",
     "        except Exception as e:\n",
     "            print(f\"[Warning] Extrapolation test failed: {e}\")\n",
@@ -1341,7 +1362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c49cf6a4",
+   "id": "880a1f13",
    "metadata": {},
    "source": [
     "## Notebook Usage Examples\n",
@@ -1351,20 +1372,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09eb205c",
+   "id": "0794b25b",
    "metadata": {},
    "source": [
     "### Example 1: Generate Dataset\n",
     "```python\n",
     "# Uncomment to run:\n",
-    "# run_node(mode='generate_data')\n",
+    "run_node(mode='generate_data')\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c7e91cd",
+   "id": "85e14346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,20 +1394,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8047ff2",
+   "id": "92b34963",
    "metadata": {},
    "source": [
     "### Example 2: Train Small MLP\n",
     "```python\n",
     "# Uncomment to run:\n",
-    "# run_node(mode='train', model='small_mlp', epochs=500, batch_size=8, lr=1e-3)\n",
+    "run_node(mode='train', model='small_mlp', epochs=500, batch_size=8, lr=1e-3)\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debe7543",
+   "id": "b860c07b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,33 +1416,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c208481",
+   "id": "860aa986",
    "metadata": {},
    "source": [
     "### Example 3: Train Large MLP\n",
     "```python\n",
     "# Uncomment to run:\n",
-    "# run_node(mode='train', model='large_mlp', epochs=500, batch_size=8, lr=1e-3)\n",
+    "run_node(mode='train', model='large_mlp', epochs=500, batch_size=8, lr=1e-3)\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0a0fd452",
+   "id": "bc96e05e",
    "metadata": {},
    "source": [
     "### Example 4: Evaluate Model\n",
     "```python\n",
     "# Uncomment to run:\n",
-    "# run_node(mode='evaluate', model='small_mlp')\n",
-    "# run_node(mode='evaluate', model='large_mlp')\n",
+    "run_node(mode='evaluate', model='small_mlp')\n",
+    "run_node(mode='evaluate', model='large_mlp')\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf569711",
+   "id": "7f66c08a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,20 +1451,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158f7e1d",
+   "id": "c4693c01",
    "metadata": {},
    "source": [
     "### Example 5: Generate Visualizations\n",
     "```python\n",
     "# Uncomment to run:\n",
-    "# run_node(mode='visualize')\n",
+    "run_node(mode='visualize')\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d0d033f",
+   "id": "3ec5e1e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0af5bd1",
+   "id": "3f724d09",
    "metadata": {
     "lines_to_next_cell": 3
    },
@@ -1474,23 +1495,6 @@
    "cell_metadata_filter": "-all",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.10"
   }
  },
  "nbformat": 4,
