--- a/node/neural_ode_learning.ipynb
+++ b/node/neural_ode_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a2acf277",
+   "id": "3d77bbda",
    "metadata": {},
    "source": [
     "# Neural ODE Learning for Cytotoxic Drug R&D Model\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "380f1b4c",
+   "id": "b473d5a4",
    "metadata": {},
    "source": [
     "## Section 1: Imports and Setup"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17b9338e",
+   "id": "43fc2477",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d1af7a",
+   "id": "46e32605",
    "metadata": {},
    "source": [
     "## Section 2: Data Generation from PDE"
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fb2b445",
+   "id": "1f07c307",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88de6139",
+   "id": "e21403f7",
    "metadata": {},
    "source": [
     "## Section 3: Dataset Class and DataLoader"
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d41691",
+   "id": "2ccfa560",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ef3935",
+   "id": "e659e80e",
    "metadata": {},
    "source": [
     "## Section 4: Neural ODE Architectures"
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df595ff8",
+   "id": "492897a7",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4475548d",
+   "id": "1d577c91",
    "metadata": {},
    "source": [
     "## Section 5: Training Functions"
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30800c44",
+   "id": "4712dcb6",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd45cde",
+   "id": "ce37c108",
    "metadata": {},
    "source": [
     "## Section 6: Evaluation and Metrics"
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fa9ae92",
+   "id": "28f397eb",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ad4de1a",
+   "id": "42f0a4c9",
    "metadata": {},
    "source": [
     "## Section 7: Visualization"
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "272b24d3",
+   "id": "7abd7701",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c7d5874",
+   "id": "13e46015",
    "metadata": {},
    "source": [
     "## Section 8: Main Execution"
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aad9241",
+   "id": "7643233b",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -1475,27 +1475,42 @@
     "        try:\n",
     "            _, _, test_dataset = load_dataset_splits(suffix=args.suffix)\n",
     "\n",
-    "            # Test with large MLP\n",
-    "            model_large = LargeMLP_NODE(state_dim=4, hidden_dim=128, dosing_period=5.0)\n",
-    "            model_large.load_state_dict(torch.load(OUT_BASE / f\"neural_ode_models/model_large_mlp{suffix_str}.pt\"))\n",
-    "            plot_extrapolation_test(model_large, test_dataset, device=device,\n",
-    "                                   save_path=FIG_BASE / f\"neural_ode_extrapolation{suffix_str}.png\")\n",
+    "            # Try large MLP first, fall back to small MLP if not available\n",
+    "            large_mlp_path = OUT_BASE / f\"neural_ode_models/model_large_mlp{suffix_str}.pt\"\n",
+    "            small_mlp_path = OUT_BASE / f\"neural_ode_models/model_small_mlp{suffix_str}.pt\"\n",
+    "\n",
+    "            if large_mlp_path.exists():\n",
+    "                model = LargeMLP_NODE(state_dim=4, hidden_dim=128, dosing_period=5.0)\n",
+    "                model.load_state_dict(torch.load(large_mlp_path))\n",
+    "                model_name = \"large_mlp\"\n",
+    "                print(\"[Extrapolation] Using Large MLP model\")\n",
+    "            elif small_mlp_path.exists():\n",
+    "                model = SmallMLP_NODE(state_dim=4, hidden_dim=32)\n",
+    "                model.load_state_dict(torch.load(small_mlp_path))\n",
+    "                model_name = \"small_mlp\"\n",
+    "                print(\"[Extrapolation] Using Small MLP model (large_mlp not found)\")\n",
+    "            else:\n",
+    "                raise FileNotFoundError(\"No trained models found for extrapolation test\")\n",
+    "\n",
+    "            plot_extrapolation_test(model, test_dataset, device=device,\n",
+    "                                   save_path=FIG_BASE / f\"neural_ode_extrapolation_{model_name}{suffix_str}.png\")\n",
     "        except Exception as e:\n",
     "            print(f\"[Warning] Extrapolation test failed: {e}\")\n",
     "\n",
     "        print(\"\\n[Done] Visualization complete!\")\n",
-    "        print(\"\\nGenerated figures:\")\n",
-    "        print(f\"  - figs/neural_ode_data_samples{suffix_str}.png\")\n",
-    "        print(f\"  - figs/neural_ode_training_curves{suffix_str}.png\")\n",
-    "        print(f\"  - figs/neural_ode_test_predictions_small_mlp{suffix_str}.png\")\n",
-    "        print(f\"  - figs/neural_ode_test_predictions_large_mlp{suffix_str}.png\")\n",
-    "        print(f\"  - figs/neural_ode_architecture_comparison{suffix_str}.png\")\n",
-    "        print(f\"  - figs/neural_ode_extrapolation{suffix_str}.png\")"
+    "        print(\"\\nGenerated figures (depending on available models):\")\n",
+    "        print(f\"  - figs/neural_ode_data_samples{suffix_str}.png (if dataset exists)\")\n",
+    "        print(f\"  - figs/neural_ode_training_curves{suffix_str}.png (if both models trained)\")\n",
+    "        print(f\"  - figs/neural_ode_test_predictions_small_mlp{suffix_str}.png (if small_mlp evaluated)\")\n",
+    "        print(f\"  - figs/neural_ode_test_predictions_large_mlp{suffix_str}.png (if large_mlp evaluated)\")\n",
+    "        print(f\"  - figs/neural_ode_architecture_comparison{suffix_str}.png (if both models evaluated)\")\n",
+    "        print(f\"  - figs/neural_ode_extrapolation_*{suffix_str}.png (if any model trained)\")\n",
+    "        print(f\"\\nData files (JSON) saved alongside each figure for analysis!\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7d18582a",
+   "id": "997e439f",
    "metadata": {},
    "source": [
     "## Notebook Usage Examples\n",
@@ -1513,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3706d0f0",
+   "id": "77b85026",
    "metadata": {},
    "source": [
     "### Example 1: Generate Dataset (with suffix)\n",
@@ -1526,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "604f7fe3",
+   "id": "868762cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,7 +1550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578fc111",
+   "id": "c9380aa2",
    "metadata": {},
    "source": [
     "### Example 2: Train Both Models (with suffix)\n",
@@ -1552,7 +1567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "566b18e8",
+   "id": "7ad6c949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a0a129",
+   "id": "789e32b4",
    "metadata": {},
    "source": [
     "### Example 3: Evaluate Both Models\n",
@@ -1575,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0eedea72",
+   "id": "6ae17101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,7 +1599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a0fb54",
+   "id": "839cb478",
    "metadata": {},
    "source": [
     "### Example 4: Generate Visualizations\n",
@@ -1597,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b5e1820",
+   "id": "ff5045ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed5d7011",
+   "id": "30fb44b4",
    "metadata": {},
    "source": [
     "### Example 5: Complete Pipeline with Timestamp\n",
@@ -1624,7 +1639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723c4baf",
+   "id": "424a3692",
    "metadata": {},
    "source": [
     "### Example 6: Compare Different Hyperparameters\n",
@@ -1644,7 +1659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f65efad",
+   "id": "f693e09b",
    "metadata": {
     "lines_to_next_cell": 3
    },
